webhook-server/webhook-server.yaml
apiVersion: v1
kind: Service
metadata:
  name: webhook-server
spec:
  ports:
    - protocol: TCP
      port: 8080
  selector:
    app: webhook-server
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: webhook-server
spec:
  serviceName: webhook-server
  replicas: 1
  selector:
    matchLabels:
      app: webhook-server
  template:
    metadata:
      labels:
        app: webhook-server
    spec:
      containers:
        - name: webhook-server
          image: 010438473788.dkr.ecr.ap-northeast-2.amazonaws.com/webhook-server
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
        - name: mariadb
          image: mariadb:latest
          args:
            - --character-set-server=utf8
            - --collation-server=utf8_general_ci
          volumeMounts:
            - name: storage
              mountPath: /var/lib/mysql
              subPath: ./mariadb
  volumeClaimTemplates:
    - metadata:
        name: storage
      spec:
        accessModes:
          - ReadWriteOnce
        storageClassName: ebs
        resources:
          requests:
            storage: 2Gi
